{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 7,
  "lineage": "3c1fb294-9763-547f-908a-6ef7520a53b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:internet-gateway/igw-0245d6cc92c96f722",
            "id": "igw-0245d6cc92c96f722",
            "owner_id": "291462262293",
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:291462262293:internet-gateway/igw-0a7f637dc0a2b9ec6",
            "id": "igw-0a7f637dc0a2b9ec6",
            "owner_id": "291462262293",
            "vpc_id": "vpc-015fd071481e1a054"
          },
          "dependencies": [
            "aws_vpc.vpc_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set_master_default_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d8eabdd646583aa",
            "original_route_table_id": "rtb-00ea3f31824594067",
            "route_table_id": "rtb-0b5a8d2ff011e8e31",
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_worker",
            "aws_vpc_peering_connection.useast1_uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set_worker_default_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a31b347bd032c7ac",
            "original_route_table_id": "rtb-01fe0e8cb820bde5a",
            "route_table_id": "rtb-00a54516464387130",
            "vpc_id": "vpc-015fd071481e1a054"
          },
          "dependencies": [
            "aws_internet_gateway.igw_oregon",
            "aws_route_table.internet_route_oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_worker",
            "aws_vpc_peering_connection.useast1_uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:route-table/rtb-0b5a8d2ff011e8e31",
            "id": "rtb-0b5a8d2ff011e8e31",
            "owner_id": "291462262293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0245d6cc92c96f722",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0e5043269da9fdeca"
              }
            ],
            "tags": {
              "Name": "Master-Region-RT"
            },
            "tags_all": {
              "Name": "Master-Region-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_worker",
            "aws_vpc_peering_connection.useast1_uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:291462262293:route-table/rtb-00a54516464387130",
            "id": "rtb-00a54516464387130",
            "owner_id": "291462262293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7f637dc0a2b9ec6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0e5043269da9fdeca"
              }
            ],
            "tags": {
              "Name": "Worker-Region-RT"
            },
            "tags_all": {
              "Name": "Worker-Region-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-015fd071481e1a054"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_worker",
            "aws_vpc_peering_connection.useast1_uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:security-group/sg-0ae1e3ffc07d13c84",
            "description": "Allow TCP/8080, TCP/22 and traffic from peering VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae1e3ffc07d13c84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP/22 from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052a8875fc56bdf05"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_sg",
            "name_prefix": "",
            "owner_id": "291462262293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:291462262293:security-group/sg-061b22fbf67605181",
            "description": "Allow TCP/22 and traffic from peering VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061b22fbf67605181",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP/22 from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins_sg_oregon",
            "name_prefix": "",
            "owner_id": "291462262293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015fd071481e1a054"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:security-group/sg-052a8875fc56bdf05",
            "description": "Allow 443 and traffic to Jenkins SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052a8875fc56bdf05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "291462262293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:subnet/subnet-0349f40231088df54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0349f40231088df54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291462262293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:291462262293:subnet/subnet-0e0de96e50696f808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0de96e50696f808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291462262293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-015fd071481e1a054"
          },
          "dependencies": [
            "aws_vpc.vpc_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:subnet/subnet-0d93c914ad84601b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d93c914ad84601b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291462262293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291462262293:vpc/vpc-0ceb3a8883855118e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a42c1484f4b45b1",
            "default_route_table_id": "rtb-00ea3f31824594067",
            "default_security_group_id": "sg-0df9c44838678e0b3",
            "dhcp_options_id": "dopt-0ac96f451db40ee60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ceb3a8883855118e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ea3f31824594067",
            "owner_id": "291462262293",
            "tags": {
              "Name": "master_vpc_jenkins"
            },
            "tags_all": {
              "Name": "master_vpc_jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:291462262293:vpc/vpc-015fd071481e1a054",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a4aabb6e3fb5fd45",
            "default_route_table_id": "rtb-01fe0e8cb820bde5a",
            "default_security_group_id": "sg-020bec3b760730ec9",
            "dhcp_options_id": "dopt-0c0cc926d674fa56a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-015fd071481e1a054",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fe0e8cb820bde5a",
            "owner_id": "291462262293",
            "tags": {
              "Name": "worker_vpc_jenkins"
            },
            "tags_all": {
              "Name": "worker_vpc_jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "useast1_uswest2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0e5043269da9fdeca",
            "peer_owner_id": "291462262293",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-015fd071481e1a054",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0ceb3a8883855118e"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peering_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e5043269da9fdeca",
            "peer_owner_id": "291462262293",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-015fd071481e1a054",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0ceb3a8883855118e",
            "vpc_peering_connection_id": "pcx-0e5043269da9fdeca"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_worker",
            "aws_vpc_peering_connection.useast1_uswest2"
          ]
        }
      ]
    }
  ]
}